nailing down the layered implementation scheme

--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,11 @@ envlist = py26,py27
 
 [testenv]
 deps = 
+    falcon
+    json
     coverage
     nose
     mock
-    notigen
-    notification_utils
-    pyrax
-    python-dateutil
     simport
 
-commands = nosetests -d -v --with-coverage --cover-inclusive --cover-package shoebox []
+commands = nosetests -d -v --with-coverage --cover-inclusive --cover-package quincy []
