Add PEP8 check and fix related issues
- Add PEP8 section to tox.ini
- Add hacking to requirements to enforce OpenStack style requirements
- Fix formatting issues flagged by flake8 check
- Add copyright notices to all remaining files
- Update .gitignore file

Change-Id: I6f6f97ca1291000acee7e925826bf853b2cc8744

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27
+envlist = py26,py27,pep8
 
 [testenv]
 deps = 
@@ -10,3 +10,12 @@ deps =
     simport
 
 commands = nosetests -d -v --with-coverage --cover-inclusive --cover-package quincy []
+
+[testenv:pep8]
+commands =
+    flake8
+
+[flake8]
+ignore =
+exclude=.venv,.git,.tox,dist,doc,*lib/python*,*egg
+show-source = True
